--- a/specs/src/Makefile
+++ b/specs/src/Makefile
@@ -5,9 +5,12 @@ INC = -I cli
 COMP = g++ -g $(INC)
 LINK = g++ -g
 
+CLI_OBJ = $(OBJ_DIR)/tokens.o $(OBJ_DIR)/splitter.o
+SI_OBJ = $(OBJ_DIR)/specItems.o $(OBJ_DIR)/dataField.o
+
 .DUMMY: directories
 
-all: directories $(EXE_DIR)/tokenTest
+all: directories $(EXE_DIR)/tokenTest $(EXE_DIR)/itemTest
 
 directories: $(EXE_DIR) $(OBJ_DIR)
 
@@ -17,17 +20,29 @@ $(EXE_DIR):
 $(OBJ_DIR):
 	$(MKDIR_C) $@
 
-$(EXE_DIR)/tokenTest: $(OBJ_DIR)/test.o $(OBJ_DIR)/tokens.o $(OBJ_DIR)/splitter.o
-	$(COMP) -o $@ ../obj/test.o ../obj/tokens.o $(OBJ_DIR)/splitter.o
+$(EXE_DIR)/tokenTest: $(OBJ_DIR)/test.o $(CLI_OBJ)
+	$(COMP) -o $@ ../obj/test.o $(CLI_OBJ)
+
+$(EXE_DIR)/itemTest: $(OBJ_DIR)/itemTest.o $(CLI_OBJ) $(SI_OBJ)
+	$(COMP) -o $@ ../obj/itemTest.o $(CLI_OBJ) $(SI_OBJ)
 
 $(OBJ_DIR)/tokens.o: cli/tokens.cc cli/tokens.h
 	$(COMP) -o $@ -c cli/tokens.cc
 	
 $(OBJ_DIR)/splitter.o: cli/splitter.cc $(OBJ_DIR)/tokens.o
 	$(COMP) -o $@ -c cli/splitter.cc
+
+$(OBJ_DIR)/specItems.o: specitems/specItems.cc specitems/specItems.h specitems/item.h
+	$(COMP) -o $@ -c specitems/specItems.cc
+
+$(OBJ_DIR)/dataField.o: specitems/dataField.cc specitems/item.h
+	$(COMP) -o $@ -c specitems/dataField.cc
 	
-$(OBJ_DIR)/test.o: test/test.cc ../obj/tokens.o cli/tokens.h
+$(OBJ_DIR)/test.o: test/test.cc cli/tokens.h
 	$(COMP) -o $@ -c test/test.cc
-	
+
+$(OBJ_DIR)/itemTest.o: test/itemTest.cc cli/tokens.h specitems/specItems.h
+	$(COMP) -o $@ -c test/itemTest.cc
+
 clean:
 	/bin/rm -rf $(EXE_DIR) $(OBJ_DIR)
