Adding first batch of conversions
Signed-off-by: Yoav Nir <synp@users-MacBook-Pro.local>

--- a/specs/src/Makefile
+++ b/specs/src/Makefile
@@ -7,6 +7,7 @@ LINK = g++ -g
 
 CLI_OBJ = $(OBJ_DIR)/tokens.o $(OBJ_DIR)/splitter.o
 SI_OBJ = $(OBJ_DIR)/specItems.o $(OBJ_DIR)/dataField.o
+PR_OBJ = $(OBJ_DIR)/conversions.o
 
 .DUMMY: directories
 
@@ -20,11 +21,11 @@ $(EXE_DIR):
 $(OBJ_DIR):
 	$(MKDIR_C) $@
 
-$(EXE_DIR)/tokenTest: $(OBJ_DIR)/test.o $(CLI_OBJ)
-	$(COMP) -o $@ ../obj/test.o $(CLI_OBJ)
+$(EXE_DIR)/tokenTest: $(OBJ_DIR)/test.o $(CLI_OBJ) $(PR_OBJ)
+	$(COMP) -o $@ ../obj/test.o $(CLI_OBJ) $(PR_OBJ)
 
-$(EXE_DIR)/itemTest: $(OBJ_DIR)/itemTest.o $(CLI_OBJ) $(SI_OBJ)
-	$(COMP) -o $@ ../obj/itemTest.o $(CLI_OBJ) $(SI_OBJ)
+$(EXE_DIR)/itemTest: $(OBJ_DIR)/itemTest.o $(CLI_OBJ) $(SI_OBJ) $(PR_OBJ)
+	$(COMP) -o $@ ../obj/itemTest.o $(CLI_OBJ) $(SI_OBJ) $(PR_OBJ)
 
 $(OBJ_DIR)/tokens.o: cli/tokens.cc cli/tokens.h
 	$(COMP) -o $@ -c cli/tokens.cc
@@ -35,8 +36,11 @@ $(OBJ_DIR)/splitter.o: cli/splitter.cc $(OBJ_DIR)/tokens.o
 $(OBJ_DIR)/specItems.o: specitems/specItems.cc specitems/specItems.h specitems/item.h
 	$(COMP) -o $@ -c specitems/specItems.cc
 
-$(OBJ_DIR)/dataField.o: specitems/dataField.cc specitems/item.h
+$(OBJ_DIR)/dataField.o: specitems/dataField.cc specitems/item.h processing/conversions.h
 	$(COMP) -o $@ -c specitems/dataField.cc
+	
+$(OBJ_DIR)/conversions.o: processing/conversions.cc processing/conversions.h
+	$(COMP) -o $@ -c processing/conversions.cc
 	
 $(OBJ_DIR)/test.o: test/test.cc cli/tokens.h
 	$(COMP) -o $@ -c test/test.cc
