Issue #21: Create man directory if it does not exist
Signed-off-by: Yoav Nir <yoav.nir@gmail.com>

--- a/specs/src/Makefile
+++ b/specs/src/Makefile
@@ -68,5 +68,6 @@ clear:
 	
 install: $(EXE_DIR)/specs specs.1.gz
 	cp $(EXE_DIR)/specs /usr/local/bin/
+	$(MKDIR_C) /usr/local/share/man/man1
 	cp specs.1.gz /usr/local/share/man/man1/
 
