First part of the conditional structure if...then...else...endif.
Still missing: elseif.  Also while

--- a/specs/src/Makefile
+++ b/specs/src/Makefile
@@ -3,12 +3,12 @@ EXE_DIR = ../exe
 INC = -I .
 
 # FOR DEBUG
-# CONDCOMP = -g -DDEBUG
-# CONDLINK = -g
+CONDCOMP = -g -DDEBUG
+CONDLINK = -g
 
 # FOR RELEASE
-CONDLINK =  -O3
-CONDCOMP =  -O3
+# CONDLINK =  -O3
+# CONDCOMP =  -O3
 
 # For profiling
 # CONDLINK = -O3 -g
