Issue #39: Add ALU debugging
Two new command line switches for debug build only:
 - --debug-alu-comp - for compiling the expressions
- -- debug-alu-run - for evaluating the expressions

--- a/specs/src/Makefile
+++ b/specs/src/Makefile
@@ -3,7 +3,7 @@ EXE_DIR = ../exe
 INC = -I .
 
 # FOR DEBUG
-# CONDCOMP = -g -DDEBUG
+# CONDCOMP = -g -DDEBUG -DALU_DUMP
 # CONDLINK = -g
 
 # FOR RELEASE
