Issue #67: make the TokenTest one-by-one
And other improvements

Signed-off-by: synp71 <yoav.nir@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ specs/src/*/*.obj
 # the compressed manpage
 specs/src/specs.1.gz
 
+# the tests temporary files
+specs/tests/__pycache__
+specs/tests/cmd.out
+specs/tests/valgrind.out
+
