--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ specs/tests/cmd.out
 specs/tests/valgrind.out
 specs/tests/theinp  
 specs/tests/theout 
-specs/tests/thespec 
+specs/tests/thespec
+specs/tests/theconf
 specs/tests/memcheck.pyc
 specs/tests/input_samples.pyc
