--- a/specs/src/Makefile.cached_depends
+++ b/specs/src/Makefile.cached_depends
@@ -4,7 +4,7 @@ cli/tokens.o: cli/tokens.cc utils/platform.h cli/tokens.h \
   processing/ProcessingState.h utils/alu.h utils/aluFunctions.h \
   utils/SpecString.h
 processing/Config.o: processing/Config.cc utils/platform.h \
-  processing/Config.h
+  utils/TimeUtils.h utils/SpecString.h processing/Config.h
 processing/ProcessingState.o: processing/ProcessingState.cc \
   processing/Config.h utils/ErrorReporting.h \
   processing/ProcessingState.h utils/alu.h utils/platform.h \
@@ -37,8 +37,8 @@ specitems/specItems.o: specitems/specItems.cc utils/ErrorReporting.h \
   utils/platform.h utils/aluFunctions.h utils/TimeUtils.h \
   processing/Reader.h utils/StringQueue.h processing/Writer.h
 test/ALUUnitTest.o: test/ALUUnitTest.cc utils/platform.h \
-  utils/ErrorReporting.h utils/alu.h processing/ProcessingState.h \
-  utils/aluFunctions.h utils/SpecString.h
+  utils/ErrorReporting.h utils/alu.h utils/TimeUtils.h \
+  utils/SpecString.h processing/ProcessingState.h utils/aluFunctions.h
 test/ProcessingTest.o: test/ProcessingTest.cc utils/platform.h \
   cli/tokens.h utils/ErrorReporting.h specitems/specItems.h \
   specitems/item.h processing/conversions.h processing/StringBuilder.h \
@@ -75,3 +75,4 @@ utils/alu.o: utils/alu.cc utils/ErrorReporting.h utils/alu.h \
 utils/aluFunctions.o: utils/aluFunctions.cc utils/ErrorReporting.h \
   utils/aluFunctions.h utils/SpecString.h utils/alu.h utils/platform.h \
   utils/TimeUtils.h processing/Config.h
+utils/platform.o: utils/platform.cc
